@@ -15,6 +15,7 @@
  */
 
 #include "forward.h"
+#include "libnr/nr-forward.h"
 
 void sp_edit_cleanup (gpointer object, gpointer data);
 
@@ -36,10 +37,10 @@ void sp_selection_copy (GtkWidget * widget);
 void sp_selection_paste (GtkWidget *widget, bool in_place);
 void sp_selection_paste_style (GtkWidget * widget);
 
-void sp_selection_apply_affine (SPSelection *selection, double affine[6]);
+void sp_selection_apply_affine(SPSelection *selection, NR::Matrix const &affine);
 void sp_selection_remove_transform (void);
 void sp_selection_scale_absolute (SPSelection *selection, double x0, double x1, double y0, double y1);
-void sp_selection_scale_relative (SPSelection *selection, NR::Point const &align, double dx, double dy);
+void sp_selection_scale_relative(SPSelection *selection, NR::Point const &align, NR::scale const &scale);
 void sp_selection_rotate_relative (SPSelection *selection, NR::Point const &center, gdouble angle);
 void sp_selection_skew_relative (SPSelection *selection, NR::Point const &align, double dx, double dy);
 void sp_selection_move_relative (SPSelection *selection, double dx, double dy);
